# shortener

./: .env  .gitignore  Cargo.toml
migrations/: 001_create_links.sql  002_add_expiry.sql  003_add_password.sql  004_add_click_events.sql
src/: main.rs
static/: admin.css  admin.js  error.css  index.css  index.js
