[package]
name = "shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
